# csvtools

./: .notes  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  csvtools.spec  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
include/: Makefile  Makefile.am  Makefile.in  csvtools.h  libcsvtools.h
lib/: .libcsvtools.c.swp  Makefile  Makefile.am  Makefile.in  libcsvtools.c  libcsvtools.la  libcsvtools_la-libcsvtools.lo
lib/.deps/: libcsvtools_la-libcsvtools.Plo
lib/.libs/: libcsvtools.la  libcsvtools.lai  libcsvtools.so.0.0.0
man/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  csv2mysql  csv2mysql.c  csv2odbc  csv2odbc.c  csv2pgsql  csv2pgsql.c  csv2sqlite  csv2sqlite.c  csv2xml.c  csvcombine.c  csvsplit.c
src/.deps/: csv2json-csv2json.Po  csv2mysql-csv2mysql.Po  csv2odbc-csv2odbc.Po  csv2odbc.Po  csv2pgsql-csv2pgsql.Po  csv2sqlite-csv2sqlite.Po  csvcombine-csvcombine.Po  csvsplit-csvsplit.Po
src/.libs/: csv2mysql  csv2odbc  csv2pgsql  csv2sqlite  lt-csv2odbc  lt-csv2pgsql
